# project-Jji7l1Lx

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
bot/: __main__.py  bot_commands.py  config.py
bot/commands/: __init__.py  dispatcher.py  errors.py  registry.py
bot/common/: __init__.py  models.py
bot/contacts/: __init__.py  errors.py  models.py  service.py
bot/notes/: __init__.py  editor.py  errors.py  models.py  service.py
bot/utils/: file_utils.py  search_utils.py
tests/contacts/: test_models.py  test_service.py
tests/notes/: test_models.py  test_service.py
