[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cna"
version = "0.1.0"
description = "CLI assistant for contacts and notes management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "rapidfuzz>=3.14.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
cna = "bot.__main__:main"

[tool.pytest.ini_options]
markers = [
    "contacts: all contact-related tests",
    "notes: all note-related tests",
    "models: unit tests for domain models",
    "service: service-layer / integration tests",
]

[tool.hatch.build.targets.wheel]
packages = ["bot"]
